<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trivial Quiz Challenge</string>
    
    <string name="trivia_title">TRIVIA</string>
    <string name="quiz_title">QUIZ</string>
    <string name="challenge_title">CHALLENGE</string>
    <string name="start">PLAY</string>
    <string name="rules">RULES</string>
      
    <string name="istructions">Try your luck and respond to the most easy questions that you never heard 
        in your entire life!!!</string>
    
    <string name="questions_text"></string>
    <string name="answer1"></string>
    <string name="answer2"></string>
    <string name="answer3"></string>
    <string name="next_question">Next Question</string>
    
    <string name="returnMenu">Return to menu</string>
    <string name="textResult"></string>
    
    <string name="action_settings">Settings</string>

</resources>
