<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center"
    android:paddingLeft="25dp"
    android:paddingRight="25dp" >

    <TextView
        android:id="@+id/questions_text"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/blue_gradient"
        android:gravity="center"
        android:radius="0dp"
        android:text="@string/questions_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/questions_text"
 >

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="26dp"
            android:text="@string/answer3"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:text="@string/answer2"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:text="@string/answer1"
            android:textColor="#FFFFFF" />
    </RadioGroup>
	
</RelativeLayout>